--- a/trading-n8n/apps/client/package.json
+++ b/trading-n8n/apps/client/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "common" : "*"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
