--- a/trading-n8n/package.json
+++ b/trading-n8n/package.json
@@ -9,9 +9,11 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "turbo": "^2.6.1",
-    "typescript": "5.9.2"
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=18"
