--- a/trading-n8n/packages/db/package.json
+++ b/trading-n8n/packages/db/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "shivam",
+  "name": "db",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
   "author": "",
   "type": "module",
   "exports": {
-    "./metadata" : "./index.ts",
-    "./type" : "./index.ts"
+    "./client": "./index.ts"
   },
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "zod": "^4.1.13"
+    "@types/mongoose": "^5.11.96",
+    "mongoose": "^9.0.0"
   }
 }
